# ephys

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSES.md  CLAUDE.md  GRB006_ephys_sessions.txt  NIDAQ-connectome.ai  README.md  TODO.md  adaptation.py  analysis_preprocessing.py  code_archive.ipynb  decoding_stim_category.ipynb  ephys.code-workspace  ephys_analysis_prototyping.ipynb  fig3_prelim_data.py  fig4_prelim_data.py  poissonGLM.py  pre-processing.py  prelim_data_fig1.py  pyproject.toml  sorted_sessions.txt  sorting.ipynb  stimulus_response_scatters.py  survey_map.py  useful_functions.py  utils.py  utils_IO.py  utils_analysis.py  utils_decoding.py  utils_neural.py  viz.py
analyses/: adaptation.py  fig4_oqe.py  stimulus_response_scatters.py  stimulus_selectivity.py  testing_timing_stim_events.py
figures/: v1_data_deck.key
indie_holder/: np2_release_20250403.form  np2_release_20250403_GRB.form
labdata_plugin/: analysisschema.py  pluginschema.py  sfn2026schema.py
metadata/: GRB006_ephys_sessions.txt
notebooks/: DataJointNpxPreprocessingSpikeStability.ipynb  GRB006.ipynb  PSTHViewer.ipynb  debug_pre_stims_times.ipynb  debug_stim_times.ipynb  debugging.ipynb  decoding_stim_category.ipynb  encoding_analysis.ipynb  ephys_analysis_prototyping.ipynb  export_data_for_marsa.ipynb  grb006_repair_nidq_events.ipynb  insert_streamsync.ipynb  investigating_double_peak.ipynb  movement_vs_stationary.ipynb  plot_VISp_responses.ipynb  populate_obx_events.ipynb  preprocess_single_session.ipynb  process_audio_sess_labdata2.ipynb  prototype_stim_pulse_width_classification.ipynb  selectivity.ipynb  stimulus_tuned_units.ipynb  testing_timing_stim_events.ipynb  to-do.ipynb  tutorial_peth.ipynb  tutorial_stat_vs_move.ipynb  unit_stability.ipynb  (+1 more)
(+104 files in other folders)
