[project]
name = "ephys"
version = "0.1.0"
description = "code for analyzing my ephys data in the Churchland Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "labdata>=0.0.22",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spks",
]

[tool.uv.sources]
spks = { git = "https://github.com/spkware/spks" }
