[project]
name = "ephys"
version = "0.2.0"
description = "code for analyzing my ephys data in the Churchland Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.3.0",
    "diptest>=0.11.0",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "labdata>=0.1.7",
    "pandas==2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spks",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]

[tool.uv.sources]
spks = { git = "https://github.com/spkware/spks" }

[tool.ty.src]
include = ["src", "tests", "scripts", "notebooks"]

[tool.ty.environment]
extra-paths = ["typings"]
